Fix issue with auto lint breaking my "crappy" demo folder

--- a/demo/play.html
+++ b/demo/play.html
@@ -4,8 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Media Speed Demo</title>
-    <link rel="stylesheet" href="plyr.css">
-    <link rel="stylesheet" href="details.css">
+    <link rel="stylesheet" href="/demo/plyr.css">
+    <link rel="stylesheet" href="/demo/details.css">
 </head>
 <body>
 <div class="tab">
@@ -85,7 +85,7 @@
                 video.play();
             });
         }
-        plyr.setup(video, {iconUrl: 'plyr.svg'});
+        plyr.setup(video, {iconUrl: '/demo/plyr.svg'});
     };
 
 
